fixed update status & notes & added new endpoints to get all status
